crates/plotnik-lib/tests/04-emit/fields/duplicate_single.txt
Q = (binary_expression left: (number) left: (number))
==== diagnostics ====
error: a `binary_expression` has one `left`, but this pattern binds `left` 2 times
 --> query.ptk:1:6
  |
1 | Q = (binary_expression left: (number) left: (number))
  |      ^^^^^^^^^^^^^^^^^
  |
help: keep a single `left:` child
